# tauri-app

./: .gitignore  CLAUDE.md  Justfile  README.md  package.json  svelte.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: command.rs  core.rs  lib.rs  utils.rs  xlsx.rs
src/components/: App.svelte  Counter.svelte  DeepState.svelte  Effect.svelte  Memory.svelte  Props.svelte  State.svelte  StudentMatcher.svelte
src/lib/: command.ts  index.ts  types.ts  utils.ts
src/lib/command/: greet.ts  index.ts  student-search-example.md  student-search.ts  upload.ts  utils.ts
src/routes/: +layout.svelte  +page.svelte
